Fix spacing issue on smaller screens

--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -4,7 +4,7 @@ body
   background-color: $eggshell
   #message
     font-family: $primary-font
-    margin-top: 30vh
+    margin: 30vh auto 3vh
     font-weight: 300
     font-size: 3em
     max-width: 80%
